trying to fix menu scroll on mobile

--- a/src/menu/Menu.css
+++ b/src/menu/Menu.css
@@ -4,7 +4,7 @@
 
 .menu-container {
 
-    position: fixed;
+    position: absolute;
     right: 0;
     top: 0;
     margin-bottom: 142px !important;
